--- a/public/index.html
+++ b/public/index.html
@@ -382,7 +382,6 @@
         <div class="banner-content">
             <h1>Mr Tuân - Xe Fortuner 7 chỗ đời mới</h1>
             <p>Xe riêng, xe ghép đi Vũng Tàu, miền Tây, Tây Ninh và các tỉnh lân cận</p>
-            <a class="banner-hotline" href="tel:0909123456">Hotline: 0978 001 979 hoặc 0389 055 268</a>
         </div>
     </div>
     <div class="bg-overlay"></div>
@@ -394,7 +393,7 @@
             <a href="tel:0978001979">0978 001 979</a>
             <span>hoặc</span>
             <a href="tel:0389055268">0389 055 268</a>
-            <button class="hotline-cta" onclick="window.location.href='#datxe'">Đặt ngay</button>
+            <button class="hotline-cta" ><a href="https://zalo.me/0978001979">Đặt ngay</a></button>
         </div>
     </header>
     <div class="container">
@@ -463,7 +462,7 @@
             </div>
         </div>
         <div class="cta">
-            <button>Đặt xe ngay</button>
+            <a href="https://zalo.me/0978001979">Đặt xe ngay</button>
         </div>
     </div>
     <footer>
